  identity keys when authenticating with Catapult. Usage:
  BEFORE initiating a client object:

  Catapult\RESTClient::sslKey("mykey.pem");

  fully turning ssl checks off (not recommended, only do if unable to sign certificate):
  Catapult\RESTClient::verify(FALSE);

- Fixes to log for Windows, Local machine setup fixes, with CURL

0.5.2
--------------------------------------------------

- Version based checking for PHP > 5.3.0 and libCurl
  currently Catapult needs these to run.

0.5.3
-----------------------------------------------------

- Add credentials.json location options. Usage:
  Catapult\Credentials::path("credentials.json");

0.5.4
-----------------------------------------------------

- BaML support, translation to native BaML verbs,
  attributes, and containers
- XML reading, writing support with builtin BaML
  checks. needs 'xml_parser'

0.7.0
----------------------------------------------------

- Project refactoring, directory structure, models.
- Transcription support. 
  Use Catapult\Transcription
   * prequisites:
   needs recording id
- MMS support, using local and absolute media urls
  * add field 'media' in Catapult\Message

- Underscores now deprecated please use camelCase in place

- Minor:
  * deprecated Credentials object you 'should' only use Client now.
  * other sub api functions added to modules.
  * listAll generic listing function for all lists
  * MediaURL type added
  * CallEvents object added
  * Patches for events
  * Tuple based initialization:
    Gather('call-id', 'gather-id')
    this will automatically get the resource and its parent. 
    * only applies to secondary models
  * CollectionSequences, Collections method find/1 will now
    update the object directly. So:
    PhoneNumbers->find(array("from" => "__NUMBER__"))
    PhoneNumbers = PhoneNumbers->find(array("from" => "__NUMBER__"))

    are the same. 
    You should now use PHP's native clone function to keep
    reference to older states